--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
         <div id="logo-container">
             <div class="logo-div">
-                <img src="./imgs/odin-lined.png" alt="logo"><span class="logo">ODIN</span>
+                <img src="./imgs/odin-lined.png" alt="logo" class="logo"><span class="logo-text">ODIN</span>
             </div>
         </div>
         <div id="form-container">
