finished the basic structre of the form element with some styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,43 @@
             </div>
         </div>
         <div id="form-container">
-
+            <div class="description">
+                <p>This is not a real online service! You know you need something like this in your life to hlep you realize your deepest dreams.
+                    Sign up not to get started.
+                </p>
+                <p>You <em>know</em> you want to.</p>
+            </div>
+            <div class="form-div">
+                <form action="" method="get">
+                    <p class="legend">Let's do this!</p>
+                    <div class="form-row">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="first-name" id="first-name">
+                    </div>
+                    <div class="form-row">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="last-name" id="last-name">
+                    </div>
+                    <div class="form-row">
+                        <label for="email">EMAIL</label>
+                         <input type="email" name="email" id="email">
+                    </div>
+                    <div class="form-row">
+                        <label for="password">PASSWORD</label>
+                         <input type="password" name="password" id="password">
+                    </div>
+                    <div class="form-row">
+                        <label for="password-conf">CONFIRM PASSWORD</label>
+                         <input type="password" name="password-conf" id="password-conf">
+                    </div>
+                    <div class="submit-div">
+                        <button type="submit">Creat Account</button>
+                    </div>
+                </form>
+        </div>
+        <div>
+            <p>Already have an account? <a href="">Log in</a></p>
+        </div>
         </div>
     </main>
 </body>
