--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="form-div">
                 <form action="" method="get">
-                    <p class="legend">Let's do this!</p>
+                   <!--  <p class="legend">Let's do this!</p> -->
                     <div class="form-row">
                         <label for="first-name">FIRST NAME</label>
                         <input type="text" name="first-name" id="first-name">
