--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="logo-div">
                 <img src="./imgs/odin-lined.png" alt="logo" class="logo"><span class="logo-text">ODIN</span>
             </div>
+            <p class="lic">Photo by <a target="_blank" class="artist" href="https://unsplash.com/@milkbox">Ryan Kwok</a> on <a target="_blank" class="artist" href="https://unsplash.com/photos/xfYMLWgI8ww">Unsplash</a> </p>
         </div>
         <div id="form-container">
             <div class="description">
@@ -26,31 +27,35 @@
                    <!--  <p class="legend">Let's do this!</p> -->
                     <div class="form-row">
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="first-name" id="first-name">
+                        <input required type="text" name="first-name" id="first-name" pattern="[a-zA-z]+">
                     </div>
                     <div class="form-row">
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" name="last-name" id="last-name">
+                        <input required type="text" name="last-name" id="last-name" pattern="[a-zA-z]+">
                     </div>
                     <div class="form-row">
                         <label for="email">EMAIL</label>
-                         <input type="email" name="email" id="email">
+                         <input required type="email" name="email" id="email" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+                    </div>
+                    <div class="form-row">
+                        <label for="phone">PHONE NUMBER</label>
+                         <input required type="tel" name="phone" id="phone">
                     </div>
                     <div class="form-row">
                         <label for="password">PASSWORD</label>
-                         <input type="password" name="password" id="password">
+                         <input required type="password" name="password" id="password">
                     </div>
                     <div class="form-row">
                         <label for="password-conf">CONFIRM PASSWORD</label>
-                         <input type="password" name="password-conf" id="password-conf">
+                         <input required type="password" name="password-conf" id="password-conf">
                     </div>
                     <div class="submit-div">
-                        <button type="submit">Creat Account</button>
+                        <button type="submit">Create Account</button>
                     </div>
                 </form>
         </div>
-        <div>
-            <p>Already have an account? <a href="">Log in</a></p>
+        <div class="login-div">
+            <p>Already have an account? <a href="" class="">Log in</a></p>
         </div>
         </div>
     </main>
