Added password pattern and password confirmation validation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
                     </div>
                     <div class="form-row">
                         <label for="email">EMAIL</label>
-                         <input required type="email" name="email" id="email" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$">
+                         <input required type="email" name="email" id="email">
                     </div>
                     <div class="form-row">
                         <label for="phone">PHONE NUMBER</label>
