Added the password critiria with js validation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div id="form-container">
             <div class="description">
-                <p>This is not a real online service! You know you need something like this in your life to hlep you realize your deepest dreams.
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
                     Sign up not to get started.
                 </p>
                 <p>You <em>know</em> you want to.</p>
@@ -56,6 +56,14 @@
         </div>
         <div class="login-div">
             <p>Already have an account? <a href="" class="">Log in</a></p>
+            <div class="password-checks">
+                Password Must Be:
+                <p class="check" id="amount">Must be at least 8 characters</p>
+                <p class="check" id="upper">At least one uppercase letter</p>
+                <p class="check" id="lower">At least one lowercase letter</p>
+                <p class="check" id="digit">At least one digit</p>
+                <p class="check" id="special">At least one special character</p>
+            </div>
         </div>
         </div>
     </main>
